--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,11 @@
-body {
-    font-size: 16;
-    color: rgba(39.00000147521496, 48.000000938773155, 67.00000360608101, 1);
-    background-color: rgba(88, 139, 139, 1);
-    position: flex;
+html, body {
+    margin: 0;
+    padding: 0;
 }
 
+body {
+    background-color: rgba(88, 139, 139);
+}
 
 #banner {
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
@@ -12,95 +13,52 @@ body {
     position: flex;
     text-align: center;
     font-size: 150px;
+    min-width: fit-content;
 
 }
 
-/* .e2_3 {
-    color: rgba(39.00000147521496, 48.000000938773155, 67.00000360608101, 1);
-    width: 1125px;
-    height: 135px;
-    position: absolute;
-    left: 157px;
-    top: 246px;
-    font-family: Bitter;
-    text-align: center;
-    font-size: 100px;
-    letter-spacing: 0;
-} */
+.block_container {
+    padding: 60px;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-column-gap: 40px;
+    grid-row-gap: 70px;
+}
 
 .leftBlock {
-    /* background-color: rgba(217.0000022649765, 217.0000022649765, 217.0000022649765, 1); */
-    width: 616px;
-    height: 752px;
-    position: absolute;
-    left: 44px;
-    top: 397px;
+    padding-top: 50px;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-column-gap: 25px;
+    grid-row-gap: 25px;
 }
+
 
 .rightBlock {
-    /* background-color: rgba(217.0000022649765, 217.0000022649765, 217.0000022649765, 1); */
-    width: 616px;
-    height: 752px;
-    position: absolute;
-    left: 780px;
-    top: 402px;
-}
-
-
-.e15_2 {
-    width: 305px;
-    height: 305px;
-    position: absolute;
-    left: 42px;
-    top: 402px;
-}
-
-.e15_3 {
-    width: 305px;
-    height: 305px;
-    position: absolute;
-    left: 839px;
-    top: 397px;
+    padding-top: 50px;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-column-gap: 25px;
+    grid-row-gap: 25px;
 }
 
 #div-form {
-    color: rgba(39.00000147521496, 48.000000938773155, 67.00000360608101, 1);
+    color: rgba(39, 48, 67);
     font-size: 24px;
     font-family: Bitter;
-    line-height: 1.2;
-    text-align: left;
-    position: absolute;
-    left: 100px;
-    top: 1200px;
-    width: 759px;
-    height: 35px;
-    z-index: 17;
 
 }
 
 .leftBlock img {
-    flex: 0 1 auto;
-    margin-right: 1rem;
-    margin-bottom: 1rem;
-    cursor: pointer;
-    border: 10px;
-    justify-content: space-evenly;
-    float: left;
-    width: 250px;
-    height: 200px
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
 
 .rightBlock img {
-    flex: 0 1 auto;
-    height: 150px;
-    margin-left: 1rem;
-    margin-bottom: 1rem;
-    cursor: pointer;
-    border: 10px;
-    justify-content: space-evenly;
-    float: left;
-    width: 250px;
-    height: 200px
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
 
 #actual-list {
