--- a/styles.css
+++ b/styles.css
@@ -15,21 +15,7 @@ body {
 
 }
 
-/* .e2_3 {
-    color: rgba(39.00000147521496, 48.000000938773155, 67.00000360608101, 1);
-    width: 1125px;
-    height: 135px;
-    position: absolute;
-    left: 157px;
-    top: 246px;
-    font-family: Bitter;
-    text-align: center;
-    font-size: 100px;
-    letter-spacing: 0;
-} */
-
 .leftBlock {
-    /* background-color: rgba(217.0000022649765, 217.0000022649765, 217.0000022649765, 1); */
     width: 616px;
     height: 752px;
     position: absolute;
@@ -38,7 +24,6 @@ body {
 }
 
 .rightBlock {
-    /* background-color: rgba(217.0000022649765, 217.0000022649765, 217.0000022649765, 1); */
     width: 616px;
     height: 752px;
     position: absolute;
@@ -109,6 +94,35 @@ body {
     color: rgba(39, 48, 67, 1);
     font-size: 24px;
     font-family: Bitter;
+}
 
 
+
+.button-container {
+    position: relative;
+    width: 50%;
+}
+
+.button-container img {
+    width: 100%;
+    height: auto;
+}
+
+.button-container .btn1 {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    background-color: #555;
+    color: white;
+    font-size: 16px;
+    padding: 12px 24px;
+    border: none;
+    cursor: pointer;
+    border-radius: 5px;
+}
+
+.button-container .btn1:hover {
+    background-color: black;
 }
