base website design

--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,7 @@
 * {
     text-transform: lowercase;
     font-family: 'Cormorant Garamond', serif;
+    cursor: url(http://www.rw-designer.com/cursor-extern.php?id=1753), auto;
 }
 
 html, body {
