--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,7 @@
     text-transform: lowercase;
     font-family: 'Cormorant Garamond', serif;
     cursor: url(http://www.rw-designer.com/cursor-extern.php?id=1753), auto;
+    color: #272838;
 }
 
 html, body {
@@ -11,11 +12,11 @@ html, body {
 }
 
 body {
-    background-color: rgba(88, 139, 139);
+    background-color: #EBEAE4;
 }
 
 .marquee_container {
-    background: #FE6846;
+    background: #6d9f71;
     display: flex;
     overflow: hidden;
     padding: 7px 0;
@@ -67,11 +68,12 @@ body {
 }
 #banner {
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-    background-color: rgba(202, 204, 144, 1);
+    background-color: #EBEAE4;
     position: flex;
     text-align: center;
-    font-size: 150px;
+    font-size: 100px;
     min-width: fit-content;
+    border-bottom: 10px #272838;
 }
 
 .block_container {
@@ -89,15 +91,12 @@ body {
     grid-row-gap: 25px;
 }
 
-.rightBlock {
-    text-align: center;
-    background-color: #AA4465;
-}
-
 #div-form {
-    color: rgba(39, 48, 67);
     font-size: 24px;
-    font-family: Bitter;
+    display: flex;
+    justify-content: center;
+    text-align: center;
+    background-color: #6d9f71;
 }
 
 .leftBlock img {
@@ -106,17 +105,31 @@ body {
     object-fit: cover;
 }
 
+.rightBlock {
+    text-align: center;
+    background-color: #6d9f71;
+}
+
+.rightBlock h2 {
+    font-size: 30px;
+}
+
 .rightBlock img {
     width: 600px;
     height: 600px;
 }
 
+.rightBlock p {
+    font-size: 24px;
+}
+
 #actual-list {
     color: rgba(39, 48, 67);
     font-size: 24px;
-    object-fit: cover;
+    display: flex;
+    justify-content: center;
+    text-align: center;
 }
-
 
 .imageContainer {
     display: flex;
