--- a/styles.css
+++ b/styles.css
@@ -134,7 +134,7 @@ body {
     font-size: 24px;
     display: flex;
     justify-content: center;
-    text-align: center;
+    text-align: left;
 }
 
 .imageContainer {
@@ -205,4 +205,38 @@ input[type="checkbox"]:checked+label::after {
 
 #list-items {
     list-style-type: none;
+}
+
+
+.container_divs {
+    position: relative;
+}
+
+.middle {
+    transition: .5s ease;
+    opacity: 0;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    text-align: center;
+    width: 100%;
+    z-index: 1;
+    pointer-events: none;
+}
+
+.container_divs:hover .inspo_images {
+    opacity: 0.3;
+}
+
+.container_divs:hover .middle {
+    opacity: 1;
+}
+
+.middle_text {
+    background-color: #04AA6D;
+    color: white;
+    font-size: 16px;
+    padding: 16px 32px;
 }
