hover box and merge edits

--- a/styles.css
+++ b/styles.css
@@ -150,7 +150,7 @@ body {
 .title {
     font-size: 36px;
     text-decoration: underline;
-    text-align: left;
+    text-align: center;
 }
 
 .imageContainer {
