--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,7 @@
     text-transform: lowercase;
     font-family: 'Cormorant Garamond', serif;
     cursor: url(http://www.rw-designer.com/cursor-extern.php?id=1753), auto;
-    color: #272838;
+    color: #383637;
 }
 
 html,
@@ -17,60 +17,37 @@ body {
     background-color: #EBEAE4;
 }
 
-.marquee_container {
-    background: #038BA8;
-    display: flex;
+.marquee {
+    width: 100%;
+    background-color: #038BA8;
     overflow: hidden;
-    padding: 7px 0;
-}
-
-.marquee_container p {
-    font-size: 25px;
-    line-height: 25px;
-    min-width: fit-content;
-    margin: 0;
-    padding: 0 50px;
-    -moz-transform: translateX(100%);
-    -webkit-transform: translateX(100%);
-    transform: translateX(100%);
-    -moz-animation: scroll-left 5s linear infinite;
-    -webkit-animation: scroll-left 5s linear infinite;
-    animation: scroll-left 10s linear infinite;
-}
-
-@-moz-keyframes scroll-left {
+    white-space: nowrap;
+  }
+  
+  .marquee_container {
+    display: inline-block;
+    white-space: nowrap;
+    animation: marqueeAnimation 60s linear infinite;
+    padding: 10px;
+    font-size: 24px;
+  }
+  
+  @keyframes marqueeAnimation {
     0% {
-        -moz-transform: translateX(100%);
+      transform: translateX(100%);
     }
-
     100% {
-        -moz-transform: translateX(-100%);
+      transform: translateX(-100%);
     }
-}
-
-@-webkit-keyframes scroll-left {
-    0% {
-        -webkit-transform: translateX(100%);
-    }
-
-    100% {
-        -webkit-transform: translateX(-100%);
-    }
-}
-
-@keyframes scroll-left {
-    0% {
-        -moz-transform: translateX(100%);
-        -webkit-transform: translateX(100%);
-        transform: translateX(100%);
-    }
-
-    100% {
-        -moz-transform: translateX(-100%);
-        -webkit-transform: translateX(-100%);
-        transform: translateX(-100%);
-    }
-}
+  }
+  
+  .marquee__item {
+    display: inline-block;
+    margin: 0 10px;
+    color:#383637;;
+    font-weight: bold;
+  }
+  
 
 #banner {
     background-color: #EBEAE4;
@@ -181,6 +158,7 @@ input[type="checkbox"] {
     height: 0;
     position: absolute;
     opacity: 0;
+    border-radius: 50px;
 }
 
 input[type="checkbox"]+label {
@@ -198,6 +176,7 @@ input[type="checkbox"]+label::before {
     height: 20px;
     border: 1px solid #ccc;
     background-color: #fff;
+    border-radius: 10px;
 }
 
 input[type="checkbox"]:checked+label::before {
@@ -251,8 +230,9 @@ input[type="checkbox"]:checked+label::after {
 }
 
 .middle_text {
-    background-color: #04AA6D;
+    background-color: #038BA8;
     color: white;
     font-size: 16px;
     padding: 16px 32px;
+    border-radius: 50px;
 }
