--- a/styles.css
+++ b/styles.css
@@ -81,15 +81,18 @@ body {
     display: flex;
     justify-content: center;
     text-align: center;
+    padding: 4px;
     background-color: #6d9f71;
     border-radius: 15px;
     align-items: center;
+    border: 2px solid black;
 }
 
 .form-input {
     border-radius: 5px;
     border: 2px;
     font-size: 20px;
+    border: 1px solid black;
 }
 
 .leftBlock img {
@@ -97,10 +100,11 @@ body {
     height: 100%;
     object-fit: cover;
     border-radius: 15px;
+    border: 2px solid black;
 }
 
 .inspo_images {
-    border: 1px solid #038BA8;
+    border: 2px solid black;
     /* Example border style */
 }
 
@@ -137,6 +141,7 @@ body {
     align-items: center;
     /* Center the child elements horizontally */
     padding: 40px;
+    border: 2px solid black;
 }
 
 .rightblock-information {
@@ -169,6 +174,7 @@ body {
     text-align: left;
     background-color: #038BA8;
     border-radius: 15px;
+    border: 2px solid black;
 }
 
 .title {
