--- a/styles.css
+++ b/styles.css
@@ -17,38 +17,56 @@ body {
     background-color: #EBEAE4;
 }
 
-.marquee {
-    width: 100%;
-    background-color: #038BA8;
-    overflow: hidden;
-    white-space: nowrap;
-}
-
-.marquee_container {
-    display: inline-block;
-    white-space: nowrap;
-    animation: marqueeAnimation 60s linear infinite;
-    padding: 10px;
-    font-size: 24px;
-}
-
-@keyframes marqueeAnimation {
+@keyframes marquee {
     0% {
-        transform: translateX(100%);
+      transform: translateX(0);
+      -webkit-transform: translateX(0);
     }
-
+  
     100% {
-        transform: translateX(-100%);
+      transform: translateX(-100%);
+      -webkit-transform: translateX(-100%);
     }
-}
-
-.marquee__item {
-    display: inline-block;
-    margin: 0 10px;
-    color: #383637;
-    ;
-    font-weight: bold;
-}
+  }
+  
+  @-webkit-keyframes marquee {
+    0% {
+      transform: translateX(0);
+      -webkit-transform: translateX(0);
+    }
+  
+    100% {
+      transform: translateX(-100%);
+      -webkit-transform: translateX(-100%);
+    }
+  }
+  
+  .marquee {
+    width: 100vw;
+    max-width: 100%;
+    padding: 7px 0 7px;
+    position: relative;
+    overflow-x: hidden;
+    display: flex;
+    z-index: 1;
+    background: #038BA8;
+  }
+  
+  .marquee__container {
+    white-space: nowrap;
+    will-change: transform;
+    animation: marquee 60s linear infinite;
+    display: flex;
+    align-items: center;
+  }
+  
+  .marquee__item {
+    margin: 0;
+    padding: 0 20px;
+    display: flex !important;
+    align-items: center;
+    font-size: 24px;
+  }
 
 
 #banner {
